--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
           "react/": "https://esm.sh/react@^19.2.4/",
           "react": "https://esm.sh/react@^19.2.4",
           "vite": "https://esm.sh/vite@^7.3.1",
-          "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+          "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+          "crypto-js": "https://esm.sh/crypto-js@^4.2.0"
         }
       }
     </script>
@@ -92,8 +93,12 @@
             word-break: break-all;
           "
         >
-          Add <b>tmanscript.github.io, device.onetel.co.za, esm.sh</b> to your
-          <b>uamallowed</b> list.
+          Add
+          <b
+            >tmanscript.github.io, device.onetel.co.za, esm.sh,
+            sandbox.payfast.co.za</b
+          >
+          to your <b>uamallowed</b> list.
         </p>
       </div>
       <button
